--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "IvarHeadline";
+    src: url("/fonts/Ivar_Headline.woff") format('woff');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,15 +12,53 @@
 
 .card-container {
     display: flex;
-    flex-direction: row;
     flex-wrap:wrap;
+    justify-content: center;
 }
 
 .card-component {
+    background-color: rgb(255, 255, 255);
     border: 1px solid darkgray;
+    margin-bottom: 15px;
+    padding: 24px;
+    font-family: 'Segoe UI', Tahoma, Geneva, sans-serif;
+}
+
+.card-component-content {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-component-content-title {
+    color: rgb(42, 42, 51);
+    font-size: 24px;
+    font-family: "IvarHeadline", 'Times New Roman', serif;
+}
+
+.card-component-content>p {
+    color:rgb(42, 42, 51);
+    margin-top: 16px;
+    text-align: center;
+    font-weight: 400;
+    line-height: 23px;
+}
+
+.card-component-button {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 106, 255);
+    border: 1px solid rgb(0, 106, 255);
+    border-radius: 4px;
+    font-size: 16px;
+    padding: 9px 16px;
+    margin: 24px 0 16px 0;
+    line-height: 24px;
+    font-weight: 600;
+    
 }
 
 img {
-    width: 400px;
+    width: 100%;
     display:block;
 }
