--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,17 +177,17 @@ img {
 .svclinks__list li::before {
   content: ' ';
   width: 1px;
-  background: red;
+  background: gray;
   height: 32px;
+  padding-top: 10px;
   position: absolute;
-  top: 5rem;
 }
 
 .svclinks__list li:nth-child(1)::before {
   display: none;
 }
 
-button {
+.svclinks__list-btn {
   padding: 12px 40px 12px 16px;
   margin: auto;
   line-height: 24px;
@@ -199,11 +199,11 @@ button {
   border: none;
 }
 
-button:hover {
+.svclinks__list-btn:hover {
   text-decoration: underline;
 }
 
-span {
+.btn-label {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   margin-right: 8px;
